examples/01-kgateway/http-route/01-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: 01-kgateway-http-route
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx-container
    image: nginx:1.14.2
    ports:
    - containerPort: 80
