examples/01-kgateway/http-route/01-simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: 01-kgateway
  labels:
    app.kubernetes.io/name: MyApp
spec:
  containers:
  - name: nginx-container
    image: nginx:1.14.2
    ports:
    - containerPort: 80
