examples/01-kgateway/http-route/02-my-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: 01-kgateway
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 80
