examples/01-kgateway/http-route/03-kgateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-http
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  allowedListeners: 
    namespaces:
      from: All
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: All
